# maturin-sample

./: .gitignore  Cargo.toml  README.md  pyproject.toml
maturin_sample/: __init__.py  maturin_sample.pyi
src/: lib.rs
tests/: test.py
